--- a/frontend/src/views/web/challenge-create.html
+++ b/frontend/src/views/web/challenge-create.html
@@ -42,7 +42,7 @@
                 </h6>
             </div>
             <div class="align-left reg-control">
-                <button class="btn ev-btn-dark waves-effect waves-dark grad-btn grad-btn-dark fs-14" type="submit" value="Submit">Next
+                <button class="btn ev-btn-dark waves-effect waves-dark grad-btn grad-btn-dark fs-14" type="submit" value="Submit" ng-click="challengeCreate.fillChallengeCreationForm()">Next
                 </button>
             </div>
         </div>
