--- a/frontend/src/views/web/create-challenge/challenge-create-using-ui.html
+++ b/frontend/src/views/web/create-challenge/challenge-create-using-ui.html
@@ -109,6 +109,28 @@
                             </span>
                         <label for="challengeEndDate">End Date</label>
                     </div>
+                    <div class="input-field align-left">
+                        <input type="checkbox" id="challengeEnableForum" name="challengeEnableForum" class="text-dark-black dark-autofill w-400" ng-model="challengeCreateUsingUi.challengeEnableForum" required>
+                            <span class="form-icon form-icon-dark">
+                                <i class="fa fa-info-circle">
+                                    <md-tooltip md-direction="right">
+                                        It is a long established fact that a
+                                    </md-tooltip>
+                                </i>
+                            </span>
+                        <label for="challengeEnableForum">Enable Forum</label>
+                    </div>
+                    <div class="input-field align-left">
+                        <input type="checkbox" id="challengePublicallyAvailable" name="challengePublicallyAvailable" ng-model="challengeCreateUsingUi.challengePublicallyAvailable" required>
+                            <span class="form-icon form-icon-dark">
+                                <i class="fa fa-info-circle">
+                                    <md-tooltip md-direction="right">
+                                        It is a long established fact that a
+                                    </md-tooltip>
+                                </i>
+                            </span>
+                        <label for="challengePublicallyAvailable">Publically Available</label>
+                    </div>
                     <div class="file-field input-field">
                         <div class="waves-effect waves-dark btn ev-btn-dark w-300 fs-14">
                             <span>Challenge Image</span>
