--- a/frontend/src/views/web/create-challenge/challenge-create-using-ui.html
+++ b/frontend/src/views/web/create-challenge/challenge-create-using-ui.html
@@ -43,8 +43,8 @@
                                    trix-focus="trixFocus(e, editor);" 
                                    trix-blur="trixBlur(e, editor);" 
                                    trix-file-accept="trixFileAccept(e, editor);" 
-                                   trix-attachment-add="trixAttachmentAdd(e, editor);" 
-                                   trix-attachment-remove="trixAttachmentRemove(e, editor);" 
+                                   trix-attachment-add="challengeCreateUsingUi.trixAttachmentAdd(e, editor);" 
+                                   trix-attachment-remove="trixAttachmentRemove(e, editor);"
                                    placeholder="Description"></trix-editor>
                         <span class="form-icon form-icon-dark">
                             <i class="fa fa-info-circle description-circle">
@@ -76,13 +76,9 @@
                                 </i>
                             </span>
                         <label for="challengeTermsAndConditions">Terms and Conditions</label>
-
                     </div>
                     <div class="input-field align-left">
-                    <md-input-container">
-                            <input mdc-datetime-picker="" date="true" time="true" type="text" id="startDate"
-                             show-todays-date="" min-date="date" ng-model="challengeCreateUsingUi.start_date" class="md-input" readonly="readonly">
-                    </md-input-container>
+                            <input mdc-datetime-picker="" date="true" time="true" type="text" id="challengeStartDate" show-todays-date="" ng-model="challengeCreateUsingUi.challengeStartDate" class="md-input" readonly="readonly" placeholder="Start Date">
                             <span class="form-icon form-icon-dark">
                                 <i class="fa fa-info-circle">
                                     <md-tooltip md-direction="right">
@@ -90,13 +86,10 @@
                                     </md-tooltip>
                                 </i>
                             </span>
-                        <label for="challengeStartDate">Start Date</label>
                     </div>
                     <div class="input-field align-left">
-                    <md-input-container>
-                            <input mdc-datetime-picker="" date="true" time="true" type="text" id="endDate"
-                             show-todays-date="" min-date="date" ng-model="challengeCreateUsingUi.end_date" class="md-input" readonly="readonly">
-                    </md-input-container>
+                            <input mdc-datetime-picker="" date="true" time="true" type="text" id="challengeEndDate"
+                             show-todays-date="" min-date="date" ng-model="challengeCreateUsingUi.challengeEndDate" class="md-input" readonly="readonly" placeholder="End Date">
                             <span class="form-icon form-icon-dark">
                                 <i class="fa fa-info-circle">
                                     <md-tooltip md-direction="right">
@@ -104,7 +97,6 @@
                                     </md-tooltip>
                                 </i>
                             </span>
-                        <label for="challengeEndDate">End Date</label>
                     </div>
                     <div class="input-field align-left">
                         <input type="checkbox" id="challengeEnableForum" name="challengeEnableForum" ng-model="challengeCreateUsingUi.challengeEnableForum" required>
